# optseqtrial

./: 07optseq.ipynb  Makefile  Pipfile  README.md  construct.cpp  construct_reverse.cpp  cputime.h  csp.cpp  csp.h  csp_linear.cpp  index.ipynb  iodata.cpp  lexer.h  makefile-for-m1  network.h  optseq  optseq-linux  optseq-linux-trial  optseq-mac  optseq.cpp  optseq.h  optseq_best_act_data.txt  optseq_input.txt  optseq_output.txt  optseqimpl.cpp  optseqimpl.h  pyproject.toml  random.h  sample.txt  search.cpp  settings.ini  solve.cpp  tabulist.h  temp-plot.html
data/optseq/: car1.txt  chart1.txt  chart10.txt  chart11.txt  chart12.txt  chart13.txt  chart14.txt  chart15.txt  chart16.txt  chart1７.txt  chart2.txt  chart3.txt  chart4.txt  chart5.txt  chart6.txt  chart7.txt  chart8.txt  chart9.txt  ex10_mode.csv  ex10_mode_res.csv  ex11_act.csv  ex11_act_mode.csv  ex11_mode.csv  ex11_mode_res.csv  ex11_non_lhs.csv  ex11_non_res.csv  ex11_res.csv  ex11_temp.csv  ex12_act.csv  ex12_act_mode.csv  ex12_mode.csv  ex12_state.csv  ex12_temp.csv  ex13_act.csv  ex13_act_mode.csv  ex13_mode.csv  ex13_mode_res.csv  ex13_res.csv  ex13_state.csv  ex13_temp.csv  (+57 more)
docs/: 07optseq.html  _config.yml  index.html  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
optseqtrial/: _nbdev.py  optseq.py
